cabal-version:   3.0
name:            haskell-opengl
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable haskell-opengl
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , OpenGL
                    , GLUT
    hs-source-dirs:   src
    default-language: Haskell2010
